--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,13 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 
+# mouse setting
+set-window-option -g mode-mouse on
+set-option -g mouse-select-window on
+set-option -g mouse-select-pane on
+set-option -g mouse-resize-pane on
+
+
 # 256色端末を使用する
 #set -g default-terminal "screen-256color"
 
