--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,10 +28,11 @@ bind -r L resize-pane -R 5
 
 
 # mouse setting
-set-window-option -g mode-mouse on
-set-option -g mouse-select-window on
-set-option -g mouse-select-pane on
-set-option -g mouse-resize-pane on
+#set-window-option -g mode-keys vi
+#set-window-option -g mode-mouse on
+#set-option -g mouse-select-window on
+#set-option -g mouse-select-pane on
+#set-option -g mouse-resize-pane on
 
 
 # 256色端末を使用する
