--- a/.gitconfig
+++ b/.gitconfig
@@ -20,6 +20,6 @@
     st = status
     br = branch
     ci = commit
-    tr = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ci) %C(blue)<%an>%Creset' --abbrev-commit
+    tr = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ci) %C(blue)<%an>%Creset' --abbrev-commit --date-order
 [init]
 	templatedir = ~/.git_template
