--- a/.tmux.conf
+++ b/.tmux.conf
@@ -78,5 +78,5 @@ set -g status-interval 60
 setw -g monitor-activity on
 set -g visual-activity on
 ## ステータスバーを上部に表示する
-set -g status-position bottom
+#set -g status-position bottom
 
