--- a/.gitconfig
+++ b/.gitconfig
@@ -8,8 +8,7 @@
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
 	path =
 [mergetool "sourcetree"]
-	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
-	trustExitCode = true
+	cmd =
 [filter "media"]
 	clean = git-media-clean %f
 	smudge = git-media-smudge %f
