--- a/.tmux.conf
+++ b/.tmux.conf
@@ -71,7 +71,7 @@ set -g status-left ""
 #set -g status-right "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 set -g status-right "Session: #S #I #P"
 ## ステータスバーのUTF-8サポートを有効にする
-set -g status-utf8 on
+#set -g status-utf8 on
 ## リフレッシュの間隔を設定する(デフォルト 15秒)
 set -g status-interval 60
 ## ヴィジュアルノーティフィケーションを有効にする
