--- a/.config/vim/dein.toml
+++ b/.config/vim/dein.toml
@@ -1,2 +1,21 @@
 [[plugins]]
 repo = 'Shougo/dein.vim'
+
+[[plugins]]
+repo = 'Shougo/unite.vim'
+hook_add = '''
+    "let g:unite_enable_start_insert=1
+    " キーマップ
+    nmap <silent> ,ub :<C-u>Unite buffer<CR> " バッファ一覧
+    nmap <silent> ,uf :<C-u>Unite -buffer-name=files file<CR> " ファイル一覧
+    nmap <silent> ,uo :<C-u>Unite outline<CR> " アウトライン
+    nmap <silent> ,um :<C-u>Unite file_mru<CR> " 最近使用したファイル一覧
+    nmap <silent> ,uu :<C-u>Unite buffer file_mru<CR> " 常用セット
+'''
+
+[[plugins]]
+repo = 'Shougo/unite-outline'
+
+[[plugins]]
+repo = 'Shougo/neomru.vim'
+
