[vimrc] add color scheme

--- a/.config/vim/dein.toml
+++ b/.config/vim/dein.toml
@@ -36,3 +36,11 @@ hook_add = '''
     au FileType vimfiler inoremap <silent> <buffer> <expr> <C-l> vimfiler#do_action('vsplit')
 '''
 
+
+# Colors
+[[plugins]]
+repo = 'w0ng/vim-hybrid'
+hook_add = '''
+    set background=dark
+'''
+
