--- a/.config/vim/dein.toml
+++ b/.config/vim/dein.toml
@@ -7,11 +7,11 @@ repo = 'Shougo/unite.vim'
 hook_add = '''
     "let g:unite_enable_start_insert=1
     " キーマップ
-    nmap <silent> ,ub :<C-u>Unite buffer<CR> " バッファ一覧
-    nmap <silent> ,uf :<C-u>Unite -buffer-name=files file<CR> " ファイル一覧
-    nmap <silent> ,uo :<C-u>Unite outline<CR> " アウトライン
-    nmap <silent> ,um :<C-u>Unite file_mru<CR> " 最近使用したファイル一覧
-    nmap <silent> ,uu :<C-u>Unite buffer file_mru<CR> " 常用セット
+    nnoremap <silent> ,ub :<C-u>Unite buffer<CR> " バッファ一覧
+    nnoremap <silent> ,uf :<C-u>UniteWithBufferDir file -buffer-name=files<CR> " ファイル一覧
+    nnoremap <silent> ,uo :<C-u>Unite outline<CR> " アウトライン
+    nnoremap <silent> ,um :<C-u>Unite file_mru<CR> " 最近使用したファイル一覧
+    nnoremap <silent> ,uu :<C-u>Unite buffer file_mru<CR> " 常用セット
 '''
 
 [[plugins]]
@@ -36,7 +36,7 @@ hook_add = '''
     let g:vimfiler_safe_mode_by_default = 0
     let g:vimfiler_edit_action = 'open'
     " キーマップ
-    nmap <silent>,fi :<C-u>VimFiler<CR>
+    nnoremap <silent>,fi :<C-u>VimFiler<CR>
     " ウィンドウを縦に分割して開く
     au FileType vimfiler nnoremap <silent> <buffer> <expr> <C-l> vimfiler#do_action('vsplit')
     au FileType vimfiler inoremap <silent> <buffer> <expr> <C-l> vimfiler#do_action('vsplit')
