[vimrc] add markdown plugins

--- a/.config/vim/dein.toml
+++ b/.config/vim/dein.toml
@@ -149,6 +149,17 @@ repo = 'tpope/vim-fugitive'
 [[plugins]]
 repo = 'cohama/agit.vim'
 
+# Markdown
+[[plugins]]
+repo = 'plasticboy/vim-markdown'
+
+[[plugins]]
+repo = 'kannokanno/previm'
+
+[[plugins]]
+repo = 'tyru/open-browser.vim'
+
+
 
 
 # Colors
