--- a/.config/vim/dein.toml
+++ b/.config/vim/dein.toml
@@ -175,6 +175,24 @@ hook_add = '''
     let g:go_fmt_command = "goimports"
 '''
 
+# syntax check
+[[plugins]]
+repo = 'vim-syntastic/syntastic'
+hook_add = '''
+    set statusline+=%#warningmsg#
+    set statusline+=%{SyntasticStatuslineFlag()}
+    set statusline+=%*
+
+    let g:syntastic_always_populate_loc_list = 1
+    let g:syntastic_auto_loc_list = 1
+    let g:syntastic_check_on_open = 1
+    let g:syntastic_check_on_wq = 0
+
+    " Go
+    let g:syntastic_go_checkers = ['golint', 'govet', 'errcheck']
+    let g:syntastic_mode_map = { 'mode': 'active', 'passive_filetypes': ['go'] }
+'''
+
 
 # Colors
 [[plugins]]
