--- a/.gitconfig
+++ b/.gitconfig
@@ -1,27 +1,30 @@
 [user]
-	name = masaki
-	email = ikeda.masaki@gmail.com
+    name = masaki
+    email = ikeda.masaki@gmail.com
 [core]
-	excludesfile = ~/.gitignore_global
-	editor = vim -u NONE -N
+    excludesfile = ~/.gitignore_global
+    editor = vim -u NONE -N
 [difftool "sourcetree"]
-	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path =
-[mergetool "sourcetree"]
-	cmd =
-	trustExitCode = true
+    cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+    path =
 [filter "media"]
-	clean = git-media-clean %f
-	smudge = git-media-smudge %f
+    clean = git-media-clean %f
+    smudge = git-media-smudge %f
+[filter "lfs"]
+    smudge = git-lfs smudge --skip %f
 [color]
-	ui = true
+    ui = true
 [alias]
     co = checkout
     st = status
     br = branch
     ci = commit
     tr = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ci) %C(blue)<%an>%Creset' --abbrev-commit --date-order --all
+    fe = fetch --prune
 [init]
-	templatedir = ~/.git_template
+    templatedir = ~/.git_template
 [push]
-	default = simple
+    default = simple
+[ghq]
+    root = ~/.ghq
+    root = ~/Develop/go/src
