[vimrc] change markdown plugin

--- a/.config/vim/dein.toml
+++ b/.config/vim/dein.toml
@@ -149,7 +149,7 @@ repo = 'editorconfig/editorconfig-vim'
 
 # Markdown
 [[plugins]]
-repo = 'plasticboy/vim-markdown'
+repo = 'tpope/vim-markdown'
 
 [[plugins]]
 repo = 'kannokanno/previm'
