[vimrc] yank 用のプラグイン追加

--- a/.config/vim/dein.toml
+++ b/.config/vim/dein.toml
@@ -10,6 +10,7 @@ hook_add = '''
     nnoremap <silent> ,uf :<C-u>UniteWithBufferDir file -buffer-name=files<CR> " ファイル一覧
     nnoremap <silent> ,uo :<C-u>Unite outline<CR> " アウトライン
     nnoremap <silent> ,um :<C-u>Unite file_mru<CR> " 最近使用したファイル一覧
+    nnoremap <silent> ,uy :<C-u>Unite history/yank<CR> " ヤンク一覧
     nnoremap <silent> ,uu :<C-u>Unite buffer file_mru<CR> " 常用セット
 '''
 
@@ -19,6 +20,10 @@ depends = ['Shougo/unite.vim']
 
 [[plugins]]
 repo = 'Shougo/neomru.vim'
+depends = ['Shougo/unite.vim']
+
+[[plugins]]
+repo = 'Shougo/neoyank.vim'
 depends = ['Shougo/unite.vim']
 
 # VimFiler
