--- a/.gitconfig
+++ b/.gitconfig
@@ -18,9 +18,10 @@
     clean = git-media-clean %f
     smudge = git-media-smudge %f
 [filter "lfs"]
-    clean = git-lfs clean -- %f
-    smudge = git-lfs smudge --skip %f
-    required = true
+	process = git-lfs filter-process --skip
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge --skip -- %f
 [alias]
     co = checkout
     st = status
