--- a/.config/vim/dein.toml
+++ b/.config/vim/dein.toml
@@ -1,7 +1,4 @@
 [[plugins]]
-repo = 'ikmski/helloworld-vim'
-
-[[plugins]]
 repo = 'Shougo/dein.vim'
 # Unite
 [[plugins]]
@@ -196,6 +193,11 @@ hook_add = '''
     let g:syntastic_mode_map = { 'mode': 'active', 'passive_filetypes': ['go'] }
 '''
 
+[[plugins]]
+repo = 'ikmski/helloworld-vim'
+
+[[plugins]]
+repo = 'ikmski/astyle-vim'
 
 # Colors
 [[plugins]]
