--- a/.gitconfig
+++ b/.gitconfig
@@ -18,10 +18,10 @@
     clean = git-media-clean %f
     smudge = git-media-smudge %f
 [filter "lfs"]
-	process = git-lfs filter-process --skip
+	process = git-lfs filter-process
 	required = true
 	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge --skip -- %f
+	smudge = git-lfs smudge -- %f
 [alias]
     co = checkout
     st = status
