--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,10 +5,11 @@ set -g base-index 1
 # ペインのインデックスを1から始める
 setw -g pane-base-index 1
 
+# 設定ファイルをリロードする
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # | でペインを立てに分割する
 bind | split-window -h
-
 # - でペインを横に分割する
 bind - split-window -v
 
@@ -26,57 +27,24 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-
-# mouse setting
-#set-window-option -g mode-keys vi
-#set-window-option -g mode-mouse on
-#set-option -g mouse-select-window on
-#set-option -g mouse-select-pane on
-#set-option -g mouse-resize-pane on
-
-
 # 256色端末を使用する
 set -g default-terminal "screen-256color"
-set -g terminal-overrides 'xterm:colors=256'
-
-# ステータスバーの色を設定する
-#set -g status-fg white
-#set -g status-bg black
-
-# ウィンドウリストの色を設定する
-#setw -g window-status-fg cyan
-#setw -g window-status-bg default
-#setw -g window-status-attr dim
-# アクティブなウィンドウを目立たせる
-#setw -g window-status-current-fg white
-#setw -g window-status-current-bg red
-#setw -g window-status-current-attr bright
-
-# ペインボーダーの色を設定する
-#set -g pane-border-fg green
-#set -g pane-border-bg black
-# アクティブなペインを目立たせる
-#set -g pane-active-border-fg white
-#set -g pane-active-border-bg yellow
-
-# コマンドラインの色を設定する
-#set -g message-fg white
-#set -g message-bg black
-#set -g message-attr bright
+set -g terminal-overrides "xterm:colors=256"
 
 # ステータスバーを設定する
-## 左パネルを設定する
+set -g status-fg default
+set -g status-bg default
 set -g status-left ""
-## 右パネルを設定する
-#set -g status-right "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 set -g status-right "Session: #S #I #P"
-## ステータスバーのUTF-8サポートを有効にする
-#set -g status-utf8 on
-## リフレッシュの間隔を設定する(デフォルト 15秒)
-set -g status-interval 60
-## ヴィジュアルノーティフィケーションを有効にする
-setw -g monitor-activity on
-set -g visual-activity on
-## ステータスバーを上部に表示する
-#set -g status-position bottom
+
+# ウィンドウリストの色を設定する
+setw -g window-status-format " #I:(#W) "
+setw -g window-status-fg black
+setw -g window-status-bg blue
+setw -g window-status-attr default
+# アクティブなウィンドウを目立たせる
+setw -g window-status-current-format " #I:(#W) "
+setw -g window-status-current-fg default
+setw -g window-status-current-bg default
+setw -g window-status-current-attr bright
 
