--- a/.gitconfig
+++ b/.gitconfig
@@ -29,6 +29,8 @@
     ci = commit
     tr = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ci) %C(blue)<%an>%Creset' --abbrev-commit --date-order --all
     fe = fetch --prune
+[url "git@github.com:"]
+    insteadOf = https://github.com/
 [ghq]
     root = ~/.ghq
     root = ~/Develop/go/src
