--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,13 +38,10 @@ set -g status-left ""
 set -g status-right "Session: #S #I #P"
 
 # ウィンドウリストの色を設定する
-setw -g window-status-format " #I:(#W)  "
-setw -g window-status-fg black
-setw -g window-status-bg blue
-setw -g window-status-attr default
+set-option -g window-status-style default,bg=default,fg=default
+set-option -g window-status-format "#I:[#W] "
+
 # アクティブなウィンドウを目立たせる
-setw -g window-status-current-format " #I:(#W)* "
-setw -g window-status-current-fg default
-setw -g window-status-current-bg default
-setw -g window-status-current-attr bright
+set-option -g window-status-current-style bright,bg=default,fg=blue
+set-option -g window-status-current-format "#I:[#W]*"
 
