--- a/.my.cnf
+++ b/.my.cnf
@@ -1,4 +1,5 @@
 [mysql]
-pager = grcat /usr/local/share/grc/conf.mysql | less -R -S -n -i -F -X
+#pager = grcat /usr/local/share/grc/conf.sql | less -R -S -n -i -F -X
+pager = less -R -S -n -i -F -X
 auto-rehash
 prompt="\\u@\\h[\\d]> "
