--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,10 +8,9 @@ setw -g pane-base-index 1
 # 設定ファイルをリロードする
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# | でペインを立てに分割する
-bind | split-window -h
-# - でペインを横に分割する
-bind - split-window -v
+# ペイン分割
+bind v split-window -h
+bind s split-window -v
 
 # Vimのキーバインドでペインを移動する
 bind h select-pane -L
