--- a/.gitconfig
+++ b/.gitconfig
@@ -14,6 +14,8 @@
     template = ~/.git_template/commit_template
 [push]
     default = simple
+[pull]
+	rebase = false
 [filter "media"]
     clean = git-media-clean %f
     smudge = git-media-smudge %f
