--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,8 +27,8 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # 256色端末を使用する
-set -g default-terminal "screen-256color"
-set -g terminal-overrides "xterm:colors=256"
+set -g default-terminal "tmux-256color"
+set-option -g terminal-overrides ",$TERM:Tc"
 
 # ステータスバーを設定する
 set -g status-fg default
