starship の AWS シンボルを変更する
絵文字の幅が正確に取れていないためプロンプトが崩れると思われる

--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -48,6 +48,9 @@ time_format = '%F %T'
 style = 'white'
 format = '[\[$time\]]($style)'
 
+[aws]
+symbol = 'AWS '
+
 [aws.region_aliases]
 ap-northeast-1 = 'jp'
 
