update tmux config

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -44,3 +44,5 @@ set-option -g window-status-format "#I:[#W] "
 set-option -g window-status-current-style bright,bg=default,fg=blue
 set-option -g window-status-current-format "#I:[#W]*"
 
+# #マウス操作を有効にする
+set-option -g mouse on
