fix(tmux): update tmux config

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -45,4 +45,10 @@ set-option -g window-status-current-style bright,bg=default,fg=blue
 set-option -g window-status-current-format "#I:[#W]*"
 
 # #マウス操作を有効にする
-set-option -g mouse on
+#set -g mouse off
+#bind-key -T edit-mode-vi WheelUpPane send-keys -X scroll-up
+#bind-key -T edit-mode-vi WheelDownPane send-keys -X scroll-down
+
+#set -g mode-keys vi
+#set -g status-keys vi
+
